[workspace]
resolver = "2"
members = [
	"node/core",
	"node/common",
	"node/dev",
	"node/testnet",
	"node/mainnet",
	"runtime/common",
	"runtime/dev",
	"runtime/testnet",
	"runtime/mainnet",
	"pallets/bfc-staking",
	"pallets/bfc-utility",
	"pallets/bfc-offences",
	"pallets/relay-manager",
	"precompiles/utils",
	"precompiles/utils/macro",
	"precompiles/bfc-staking",
	"precompiles/bfc-offences",
	"precompiles/relay-manager",
	"precompiles/governance",
	"precompiles/collective",
	"precompiles/balance",
	"primitives/account",
	"primitives/core",
	"primitives/bfc-staking",
]
[profile.release]
panic = "unwind"

[workspace.package]
authors = ["bifrost-platform"]
homepage = "https://www.bifrostnetwork.com"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bifrost-platform/bifrost-node"

[workspace.dependencies]
# General
substrate-fixed = { git = "https://github.com/encointer/substrate-fixed", default-features = false }
parity-scale-codec = { version = "3.2.2", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.0", default-features = false, features = [
	"derive",
] }
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }
environmental = { version = "1.1.2", default-features = false }
clap = { version = "4.0.9", features = ["derive"] }
hex = { version = "0.4.3", default-features = false }
rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.10", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
impl-serde = { version = "0.3.1", default-features = false }
blake2-rfc = { version = "0.2.18", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
serde = { version = "1.0.101", default-features = false }
jsonrpsee = { version = "0.16.2", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }
log = { version = "0.4", default-features = false }
impl-trait-for-tuples = "0.2.2"
similar-asserts = "1.1.0"
prettyplease = "0.1.18"
hex-literal = "0.3.4"
derive_more = "0.99"
proc-macro2 = "1.0"
serde_json = "1.0"
futures = "0.3.1"
tokio = "1.28.2"
paste = "1.0.8"
affix = "0.1.2"
quote = "1.0"
case = "1.0"
syn = "1.0"

# BIFROST Primitive
bp-core = { default-features = false, path = "primitives/core" }
bp-staking = { default-features = false, path = "primitives/bfc-staking" }
account = { default-features = false, path = "primitives/account" }

# BIFROST Runtime
bifrost-common-constants = { default-features = false, path = "runtime/common/constants" }
bifrost-dev-constants = { default-features = false, path = "runtime/dev/constants" }
bifrost-testnet-constants = { default-features = false, path = "runtime/testnet/constants" }
bifrost-mainnet-constants = { default-features = false, path = "runtime/mainnet/constants" }
bifrost-common-runtime = { default-features = false, path = "runtime/common" }
bifrost-dev-runtime = { path = "runtime/dev" }
bifrost-testnet-runtime = { path = "runtime/testnet" }
bifrost-mainnet-runtime = { path = "runtime/mainnet" }

# BIFROST Client
bifrost-common-node = { path = "node/common" }
bifrost-dev-node = { path = "node/dev" }
bifrost-testnet-node = { path = "node/testnet" }
bifrost-mainnet-node = { path = "node/mainnet" }

# BIFROST Frame
pallet-bfc-staking = { default-features = false, path = "pallets/bfc-staking" }
pallet-bfc-utility = { default-features = false, path = "pallets/bfc-utility" }
pallet-bfc-offences = { default-features = false, path = "pallets/bfc-offences" }
pallet-relay-manager = { default-features = false, path = "pallets/relay-manager" }

# BIFROST Precompile
precompile-utils = { default-features = false, path = "precompiles/utils" }
precompile-utils-macro = { path = "precompiles/utils/macro" }
precompile-bfc-staking = { default-features = false, path = "precompiles/bfc-staking" }
precompile-bfc-offences = { default-features = false, path = "precompiles/bfc-offences" }
precompile-relay-manager = { default-features = false, path = "precompiles/relay-manager" }
precompile-governance = { default-features = false, path = "precompiles/governance" }
precompile-collective = { default-features = false, path = "precompiles/collective" }
precompile-balance = { default-features = false, path = "precompiles/balance" }

# Substrate Client
sc-cli = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-client-api = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-rpc = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-rpc-api = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-transaction-pool = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-transaction-pool-api = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-chain-spec = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-consensus = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-consensus-aura = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-consensus-grandpa = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-consensus-grandpa-rpc = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-consensus-manual-seal = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-network = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-network-sync = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-service = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-executor = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-telemetry = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sc-basic-authorship = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
substrate-prometheus-endpoint = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }

# Substrate Primitive
sp-io = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-api = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-block-builder = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-blockchain = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-consensus = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-consensus-aura = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-consensus-grandpa = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-core = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-inherents = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-offchain = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-runtime = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-runtime-interface = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-session = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-std = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-transaction-pool = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-version = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-staking = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-keystore = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
sp-timestamp = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }

# Substrate FRAME
substrate-frame-rpc-system = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
frame-system = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
frame-support = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
frame-executive = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
frame-benchmarking = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
frame-benchmarking-cli = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-aura = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-balances = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-grandpa = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-sudo = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-timestamp = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-transaction-payment-rpc = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-scheduler = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-session = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-authorship = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-utility = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-collective = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-democracy = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-membership = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-im-online = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-offences = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-treasury = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-identity = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-preimage = { default-features = false, git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }

# Substrate Builds
substrate-wasm-builder = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }
substrate-build-script-utils = { git = "https://github.com/alstjd0921/bifrost-substrate", branch = "bifrost-polkadot-v0.9.43-with-R" }

# Frontier Client
fc-db = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fc-rpc = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fc-mapping-sync = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fc-rpc-core = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fc-rpc-debug = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fc-rpc-trace = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fc-rpc-txpool = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }

# Frontier Primitive
fp-self-contained = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fp-storage = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fp-evm = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fp-ext = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fp-rpc = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fp-rpc-debug = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fp-rpc-txpool = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
fp-rpc-evm-tracing-events = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }

# Frontier Runtime
evm-tracer = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }

# Frontier FRAME
pallet-evm = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-ethereum = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-base-fee = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-evm-precompile-bn128 = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }
pallet-evm-precompile-blake2 = { default-features = false, git = "https://github.com/alstjd0921/bifrost-frontier", branch = "bifrost-polkadot-v0.9.43-with-R" }

bifrost-relayer = { default-features = false, git = "https://github.com/alstjd0921/bifrost-relayer.rs", branch = "with-R" }
br-primitives = { default-features = false, git = "https://github.com/alstjd0921/bifrost-relayer.rs", branch = "with-R" }